// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article flag 1`] = `
<div>
  <div>
    <IconDiamond
      fillColour="black"
      height={8}
      width={8}
    />
  </div>
  <div
    aria-label="No Colour Flag"
  >
    no colour
  </div>
</div>
`;

exports[`2. red article flag 1`] = `
<div>
  <div>
    <IconDiamond
      fillColour="red"
      height={8}
      width={8}
    />
  </div>
  <div
    aria-label="Coloured Red Flag"
  >
    coloured red
  </div>
</div>
`;

exports[`3. new article flag 1`] = `
<div>
  <div>
    <IconDiamond
      fillColour="#E34605"
      height={8}
      width={8}
    />
  </div>
  <div
    aria-label="new Flag"
  >
    new
  </div>
</div>
`;

exports[`4. updated article flag 1`] = `
<div>
  <div>
    <IconDiamond
      fillColour="#3C81BE"
      height={8}
      width={8}
    />
  </div>
  <div
    aria-label="updated Flag"
  >
    updated
  </div>
</div>
`;

exports[`5. exclusive article flag 1`] = `
<div>
  <div>
    <IconDiamond
      fillColour="#C51D24"
      height={8}
      width={8}
    />
  </div>
  <div
    aria-label="exclusive Flag"
  >
    exclusive
  </div>
</div>
`;

exports[`6. sponsored article flag 1`] = `
<div>
  <div>
    <IconDiamond
      fillColour="#4D4D4D"
      height={8}
      width={8}
    />
  </div>
  <div
    aria-label="sponsored Flag"
  >
    sponsored
  </div>
</div>
`;
